# spotter_truck_fuel_stop

./: .gitignore  manage.py  pyproject.toml  pytest.ini
data/: fuelstops_address_geocoded.csv  geocode_cache.json
fuel_optimization/: asgi.py  settings.py  urls.py  wsgi.py
fuel_stops/: admin.py  apps.py  constants.py  exceptions.py  models.py  serializers.py  urls.py  views.py
fuel_stops/management/commands/: geocode_csv.py  import_create_fuelstops.py
fuel_stops/migrations/: 0001_initial.py  0002_auto_20250624_1231.py
fuel_stops/services/: import_create_fuelstop_service.py  route_optimizer.py  route_optimizer_service.py
fuel_stops/tests/: conftest.py
fuel_stops/tests/functional_tests/: test_optimal_fuel_stop_route.py
fuel_stops/tests/unittests/: test_bulk_create_fuelstops.py  test_geoode_csv_command.py
fuel_stops/tests/unittests/commands/: test_bulk_create_fuelstops.py  test_geoode_csv_command.py
fuel_stops/utils/: geocode_cache.py  geocoder.py  import_create_fuelstops.py  open_route_service.py
fuel_ups/: admin.py  apps.py  main.py  models.py  utils.py
fuel_ups/management/commands/: geocode_csv.py  import_create_fuelstops.py
fuel_ups/utils/: geocode_cache.py  import_create_fuelstops.py
