[tool.poetry]
name = "spotter-fuel-up"
version = "0.1.0"
description = ""
authors = ["Braimah Hassan <royalty0013@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "3.2.23"
djangorestframework = "3.14.0"
openrouteservice = "^2.3.3"
psycopg2-binary = "^2.9.10"
python-decouple = "^3.8"
geopy = "^2.4.1"
pandas = "^2.3.0"
black = "^25.1.0"
isort = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
